# Utext

./: .gitignore  CMakeLists.txt  README.md  build.sh  editor.cpp  editor.h  editor.ui  help.h  help.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openfiles.cpp  openfiles.ui  utext.pro  window_find_replace.cpp  window_find_replace.ui
app/: CMakeLists.txt
app/src/: editor.h  help.ui  mainwindow.cpp  mainwindow.ui  openfiles.h  window_find_replace.h  window_find_replace.ui
